termusdir = $(datadir)/termus
dist_termus_DATA = \
	rc \
	amazon.theme \
	cyan.theme \
	default.theme \
	dracula.theme \
	gray-88.theme \
	green-mono-88.theme \
	green.theme \
	gruvbox-alt.theme \
	gruvbox.theme \
	gruvbox-warm.theme \
	jellybeans.theme \
	night.theme \
	solarized-dark.theme \
	solarized-light.theme \
	spotify.theme \
	xterm-white.theme \
	zenburn.theme
